Fix invisible click glitch and start working on mobile nav

--- a/app/assets/stylesheets/_custom.scss
+++ b/app/assets/stylesheets/_custom.scss
@@ -10,6 +10,8 @@
 	$dropdown-element-padding : 10px;
 	$search-box-width: 320px;
 
+	$mobile-navbar-height: 55px;
+
 
 // Trival Styles
 	// Color Styles
@@ -520,6 +522,7 @@
 	font-weight: $header-font-weight;
 	color:#000;
 	@include box-shadow(0 0 7px $shadow-color);
+	.navigationpanel{display:none;}
 	.bpsf-logo{
 		display:inline-block;
 		height:$navigation-bar-height;
@@ -570,56 +573,83 @@
 		float:right;
 		padding: 0px $navigation-element-padding 0px $navigation-element-padding;
 	}
-	.dropdown{
-		background-color: $white;
-		font-size: $med;
-		position:fixed;
-		top: $navigation-bar-height + 10;
-		z-index:-999999;
-		cursor:default;
-		@include opacity(0);
-		@include box-shadow(0 0 3px #999);
-		@include transition-duration(.2s);
-		li{
-			padding: $dropdown-element-padding;
-		}
-		&:before {
-		    content: " ";
-		    width: 0;
-		    height: 0;
-		    position: absolute;
-			top: -9px;
-			border-bottom: 9px solid $white !important;
-			border-left: 9px solid transparent;
-			border-right: 9px solid transparent;
-		}
-		&.open-dropdown{
-			z-index: 700;
-			@include opacity(1);
-		}
+
+}
+
+.dropdown{
+	background-color: $white;
+	font-size: $med;
+	position:fixed;
+	top: $navigation-bar-height + 10;
+	z-index:-999999;
+	cursor:default;
+	opacity:0;
+	@include box-shadow(0 0 3px #999);
+	@include transition-duration(.2s);
+	@include transition-property(opacity);
+	li{
+		padding: $dropdown-element-padding;
 	}
-	.FAQ-dropdown{
-		@extend .dropdown;
-		left: 202px;
-		width: auto;
-		&:before{
-			left:8px;
-		}
+	&:before {
+	    content: " ";
+	    width: 0;
+	    height: 0;
+	    position: absolute;
+		top: -9px;
+		border-bottom: 9px solid $white !important;
+		border-left: 9px solid transparent;
+		border-right: 9px solid transparent;
 	}
-	.userdropdown{
-		@extend .dropdown;
-		right:10px;
-		width:150px;
-		&:before{
-			right:8px;
-		}
+	&.open-dropdown{
+		z-index: 700;
+		opacity:1;
+	}
+}
+.FAQ-dropdown{
+	@extend .dropdown;
+	left: 202px;
+	width: auto;
+	&:before{
+		left:8px;
+	}
+}
+.userdropdown{
+	@extend .dropdown;
+	right:10px;
+	width:150px;
+	&:before{
+		right:8px;
 	}
 }
 
 
-@include respond(tablets){
+@include respond(all-tablets){
+	.navigationpanel{
+		display:block;
+		position:fixed;
+		top:0px;
+		width:100%;
+		height:$mobile-navbar-height;
+		background-color:$primary-color;
+		.burger {
+			position: absolute;
+			float: left;
+			padding: 10px;
+			top: 4px;
+			left: 10px;
+			display: block;
+			li {
+				width: 30px;
+				height: 4px;
+				background-color: red;
+				border-radius: 3px;
+				margin: 5px 0;
+			}
+		}
+	}
 	.navigationbar{
-		background-color:red;
+		height:100%;
+		width:250px;
 	}
 }
 
